# Github-User-Skills-Extractor-For-All-Repos

./: .coverage  .coveragerc  .gitignore  README.md  coverage.xml  extract_cv_skills.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
cvskills_extractor/: __init__.py  analyzer.py  cli.py  config.py  evidence.py  github_http.py  miner.py  rules.py  utils.py
tests/: test_analyzer.py  test_evidence.py  test_miner.py  test_rules.py  test_utils.py
